--- a/index.html
+++ b/index.html
@@ -5,111 +5,136 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Data Science Portfolio</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Data Science Portfolio</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#bio">Bio/Introduction</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#projects">Projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#education">Education</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#experience">Professional Experience</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact Me</a>
-        </li>
-      </ul>
+    <div class="container">
+      <a class="navbar-brand" href="#">Data Science Portfolio</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="#introduction">Introduction</a></li>
+          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
+          <li class="nav-item"><a class="nav-link" href="#experience">Professional Experience</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact Me</a></li>
+        </ul>
+      </div>
     </div>
   </nav>
 
-  <section id="bio" class="container mt-5">
-    <div class="row">
-      <div class="col-md-4">
-        <img src="images/voxtr.cohort_photorealistic_soccer_scout_in_the_stands_of_a_bea_a29c2906-7c3a-4819-bdfe-66b7f37fb1e1.png"
-          alt="Profile Image" class="img-fluid rounded-circle">
-      </div>
-      <div class="col-md-8">
-        <h2>Introduction</h2>
-        <p>Driven and dedicated Data Science student who possesses a genuine passion for sports. With a proactive
-          approach to learning, I consistently seek out new opportunities to expand my knowledge and skill set. I have
-          demonstrated the ability to quickly grasp complex concepts and thrive in both independent and collaborative
-          work environments. My positive attitude, combined with my strong work ethic, allows me to efficiently
-          accomplish tasks while maintaining a harmonious and supportive atmosphere. I approach every opportunity with
-          enthusiasm and a commitment to delivering high-quality results.</p>
-      </div>
-    </div>
-  </section>
-
-  <section id="projects" class="container mt-5">
-    <h2>Projects</h2>
-    <div class="row">
-      <div class="col-md-4">
-        <div class="card">
-          <img src="images/Data_to_goals.png" class="card-img-top" alt="Project Image">
-          <div class="card-body">
-            <h5 class="card-title">Data to Goals: Predicting Soccer Match outcomes with Machine Learning</h5>
-            <p class="card-text">Use tools from data scraping to coding my own machine learning models using historical
-              match data to produce robust and reliable predictions for soccer game results.</p>
-            <a href="https://www.linkedin.com/feed/update/urn:li:activity:7088663445394362368/"
-              class="btn btn-primary">Learn More</a>
-          </div>
+  <!-- Introduction -->
+  <section id="introduction" class="py-5 bg-white">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="images/voxtr.cohort_photorealistic_soccer_scout_in_the_stands_of_a_bea_a29c2906-7c3a-4819-bdfe-66b7f37fb1e1.png"
+            alt="Profile Image" class="img-fluid rounded-circle">
+        </div>
+        <div class="col-md-6">
+          <h2 class="display-4">Introduction</h2>
+          <p>Driven and dedicated Data Science student who possesses a genuine passion for sports. With a proactive
+            approach to learning, I consistently seek out new opportunities to expand my knowledge and skill set. I
+            have demonstrated the ability to quickly grasp complex concepts and thrive in both independent and
+            collaborative work environments. My positive attitude, combined with my strong work ethic, allows me to
+            efficiently accomplish tasks while maintaining a harmonious and supportive atmosphere. I approach every
+            opportunity with enthusiasm and a commitment to delivering high-quality results.</p>
         </div>
       </div>
-      <!-- Add more project cards here -->
     </div>
   </section>
 
-  <section id="education" class="container mt-5">
-    <h2>Education</h2>
-    <div class="row">
-      <div class="col-md-4">
-        <img src="images/chapman_fenestra.png" alt="Education Image" class="img-fluid">
+  <!-- Projects -->
+  <section id="projects" class="py-5 bg-light">
+    <div class="container">
+      <h2 class="display-4 text-center mb-4">Projects</h2>
+      <div class="row">
+        <!-- Project Card 1 -->
+        <div class="col-md-4 mb-4">
+          <div class="card">
+            <img src="images/Data_to_goals.png" alt="Project Image" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Data to Goals: Predicting Soccer Match outcomes with Machine Learning</h5>
+              <p class="card-text">Use tools from data scraping to coding my own machine learning models using
+                historical match data to produce robust and reliable predictions for soccer game results.</p>
+              <a href="https://www.linkedin.com/feed/update/urn:li:activity:7088663445394362368/"
+                class="btn btn-dark">Learn More</a>
+            </div>
+          </div>
+        </div>
+        <!-- Add Project Card 2 and 3 here -->
       </div>
-      <div class="col-md-8">
-        <h4>Chapman University</h4>
-        <p>Years Attended: 2022-2026</p>
-        <p>Relevant Coursework: Intro to Python, Intro to Java, Business Analytics</p>
+    </div>
+  </section>
+
+  <!-- Education -->
+  <section id="education" class="py-5 bg-white">
+    <div class="container">
+      <h2 class="display-4 text-center mb-4">Education</h2>
+      <div class="row">
+        <!-- Education Card 1 -->
+        <div class="col-md-6 mb-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Chapman University</h5>
+              <p class="card-text">Years Attended: 2022-2026</p>
+              <p class="card-text">Relevant Coursework: Intro to Python, Intro to Java, Business Analytics</p>
+            </div>
+            <img src="images/chapman_fenestra.png" alt="Chapman University" class="card-img-bottom">
+          </div>
+        </div>
+        <!-- Add Education Card 2 and 3 here -->
       </div>
     </div>
   </section>
 
-  <section id="experience" class="container mt-5">
-    <h2>Professional Experience</h2>
-    <h4>Data Science Intern at XE Money Transfer</h4>
-    <ul>
-      <li>Used AWS S3 and RDS databases to pull data.</li>
-      <li>Performed analysis of historical transactions using ML fraud model.</li>
-      <li>Made a testing module to accelerate Feature Creation in fraud model.</li>
-    </ul>
+  <!-- Professional Experience -->
+  <section id="experience" class="py-5 bg-light">
+    <div class="container">
+      <h2 class="display-4 text-center mb-4">Professional Experience</h2>
+      <div class="row">
+        <!-- Experience Card 1 -->
+        <div class="col-md-12 mb-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Data Science Intern at XE Money Transfer</h5>
+              <ul>
+                <li>Used AWS S3 and RDS databases to pull data.</li>
+                <li>Performed analysis of historical transactions using ML fraud model.</li>
+                <li>Made a testing module to accelerate Feature Creation in fraud model.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- Add Experience Card 2 and 3 here -->
+      </div>
+    </div>
   </section>
 
-  <footer id="contact" class="bg-dark text-white text-center py-3">
-    <p>Contact Me</p>
-    <a href="www.linkedin.com/in/matthew-molteni" class="text-white">LinkedIn</a>
-    <div class="mt-2">
-      <input type="email" placeholder="Your email">
-      <button class="btn btn-primary">Connect</button>
+  <!-- Contact Me -->
+  <section id="contact" class="py-5 bg-dark text-white">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h2 class="display-4">Contact Me</h2>
+          <p>Connect with me on LinkedIn:</p>
+          <a href="www.linkedin.com/in/matthew-molteni" class="btn btn-outline-light">LinkedIn</a>
+        </div>
+        <!-- Add Contact Form here -->
+      </div>
     </div>
-  </footer>
+  </section>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <!-- JavaScript (Optional for ScrollSpy) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
+
